<resources>
    <string name="msg_wifi_enabled">Wifi enabled</string>
    <string name="msg_mobile_data_enabled">Mobile data enabled</string>
    <string name="msg_not_connected_to_internet">Not connected to Internet</string>

    <string name="log_fcm_message_id">"FCM Message Id: "</string>
    <string name="Sign_in">sign_in</string>
    <string name="Add_Interest">Select any five interests here </string>
    <string name="log_fcm_notification_message">"FCM Notification Message: "</string>
    <string name="log_fcm_data">"FCM Data Message: "</string>
    <string name="log_fcm_data_message">"FCM Data Message:(TA)G "</string>
    <string name="text_ok">OK</string>
    <string name="text_exit">Exit</string>
    <string name="text_retry">Retry</string>
    <string name="session_expired">Session expired.</string>
    <string name="loading">Loading…</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="your_account">YOUR ACCOUNT</string>
    <string name="date_post">Date Posts</string>
    <string name="my_dates">My Dates</string>
    <string name="my_favourite">My Favourites</string>
    <string name="tv_memberships">MemberShips</string>
    <string name="account_setting">Account Settings</string>
    <string name="logout">Logout</string>
    <string name="error_date">Date not in Correct format</string>
    <string name="select_gender">Select \nGender :</string>
    <string name="tos">I accept Terms of Service  and Privacy Policy</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_phone_num">Email / Phone Number</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_up_with_fb">Sign Up With Facebook</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="edit_number">Edit Number</string>
    <string name="otp_text">Please Enter OTP number you have \nreceived as an SMS on phone no :</string>
    <string name="verify">Verify</string>
    <string name="relationship_history">Relationship history</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="religion">Religion</string>
    <string name="body_type">Body Type</string>
    <string name="smoking">Smoking</string>
    <string name="drinking">Drinking</string>
    <string name="orientation">Orientation</string>
    <string name="skip"><![CDATA[Skip >>]]></string>
    <string name="next">Next</string>
    <string name="height">Height</string>
    <string name="set">Set</string>
    <string name="edittext_new_Number">Enter New Number</string>
    <string name="button_submit">Submit</string>

    <!-- Image Chooser -->
    <string name="text_cancel">Cancel</string>
    <string name="text_camera">Camera</string>
    <string name="text_setting">Settings</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_multiple">Multiple</string>
    <string name="text_choose_image">Choose Image</string>
    <string name="permission_camera_storage_msg">Permissions are required for camera &amp; storage.</string>
    <string name="permission_camera_storage_denied_msg">Permissions denied. Please grant permission for camera &amp; storage in setting.</string>

    <!--Error-->
    <string name="error_email_field_empty">Please enter email address.</string>
    <string name="error_invalid_email">Please enter valid email address.</string>
    <string name="error_password_field_empty">Please enter password.</string>
    <string name="error_confirm_password_field_empty">Please enter confirm password.</string>
    <string name="error_password_must_be_greater_than_5_character">Password must be greater than 5 character.</string>
    <string name="error_phone_number_field_empty">Please enter phone number.</string>
    <string name="error_invalid_phone_number">Please enter valid phone number.</string>
    <string name="error_first_name_field_empty">Please enter first name</string>
    <string name="error_name_field_empty">Please enter name</string>
    <string name="error_last_name_field_empty">Please enter last name</string>
    <string name="error_name_two_character_long">Name must contain at least two characters</string>
    <string name="error_first_name_two_character_long">First name must contain at least two characters</string>
    <string name="error_last_name_two_character_long">Last name must contain at least two characters</string>
    <string name="error_name_special_number_character">Name cannot contain number &amp; special characters</string>
    <string name="error_first_name_special_number_character">First name cannot contain number &amp; special characters</string>
    <string name="error_last_name_special_number_character">Last name cannot contain number &amp; special characters</string>
    <string name="error_password_mismatch">Password Mismatch!</string>
    <string name="error_no_files_added">No files added</string>
    <string name="error_device_not_supported">This device is not supported.</string>
    <string name="error_internet_not_connected">Not connected to internet. Please check your internet connection or try again later.</string>
    <string name="error_fb_login_failed">Facebook Login failed!!</string>
    <string name="error_not_a_valid_image_file">File is not a valid image.</string>
    <string name="text">Please Enter OTP number you have recieved as an SMS on phone no : </string>
    <string name="otp_verify">Verify</string>


    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="title_settings_dialog">Permissions Required</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
